implemented detail panels in grid

--- a/src/views/Diagnostics/Diagnostics.module.css
+++ b/src/views/Diagnostics/Diagnostics.module.css
@@ -5,3 +5,9 @@
     width: 100%;
 }
 
+.detailPanel{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
