--- a/src/routes.module.css
+++ b/src/routes.module.css
@@ -23,3 +23,13 @@
   justify-items: center;
   text-align: center;
 }
+.noAccessRights {
+  width: 100vw;
+  height: 100vh; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  text-align: center;
+}
