--- a/src/routes.module.css
+++ b/src/routes.module.css
@@ -2,28 +2,7 @@
   margin-top: 60px;
   height: calc(100% - 60px);
 }
-
-.circularProgress {
-  width: 100vw;
-  height: 100vh; 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  justify-items: center;
-  text-align: center;
-}
-.verifyEmail {
-  width: 100vw;
-  height: 100vh; 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  justify-items: center;
-  text-align: center;
-}
-.noAccessRights {
+.centeredContent {
   width: 100vw;
   height: 100vh; 
   display: flex;
