--- a/src/standalone/Login/Login.module.css
+++ b/src/standalone/Login/Login.module.css
@@ -1,5 +1,8 @@
 .loginWrapper {
+  width: 100vw;
+  height: 80vh; 
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
