--- a/src/standalone/LandingPage/LandingPage.module.css
+++ b/src/standalone/LandingPage/LandingPage.module.css
@@ -1,6 +1,6 @@
 .pageWrapper {
   width: 100vw;
-  height: 80vh; 
+  margin-top: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
