--- a/src/standalone/Login/Login.module.css
+++ b/src/standalone/Login/Login.module.css
@@ -1,6 +1,6 @@
 .loginWrapper {
   width: 100vw;
-  height: 80vh; 
+  margin-top: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
