--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -13,6 +13,9 @@
     margin-right: 16px;
 }
 
-.title {
+.leftSide {
     flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: left;
 }
