--- a/src/standalone/Login/Login.module.css
+++ b/src/standalone/Login/Login.module.css
@@ -7,5 +7,25 @@
   justify-content: center;
 }
 .errorDiv {
+  margin-top: 10px;
   color: red;
+}
+.languageMenu {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+.wrongPassword {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.emailNotFound {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
