user settings screen

--- a/src/components/LanguageMenu/LanguageMenu.module.css
+++ b/src/components/LanguageMenu/LanguageMenu.module.css
@@ -1,4 +1,12 @@
 .mainDiv {
-    display: flex;
+  display: flex;
+}
+
+.listItemIconWithText {
+  display: flex;
+}
+
+.listItemIconAlone {
+  min-width: unset !important;
 }
 
