--- a/src/standalone/TenantSelection/TenantSelection.module.css
+++ b/src/standalone/TenantSelection/TenantSelection.module.css
@@ -1,10 +1,9 @@
 .pageWrapper {
-  width: 100vw;
-  margin-top: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 50px;
 }
 
 .errorDiv {
