--- a/src/views/UserSettings/UserSettings.module.scss
+++ b/src/views/UserSettings/UserSettings.module.scss
@@ -1,8 +1,8 @@
 .mainBody {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .gridItem {
@@ -23,4 +23,19 @@
       display: none;
     }
   }
+}
+
+.loadingWrapper {
+  height: 30vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  text-align: center;
+}
+
+.title {
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
