--- a/src/views/Painting/PaintingUpdate.module.css
+++ b/src/views/Painting/PaintingUpdate.module.css
@@ -6,13 +6,27 @@
     padding-top: 20px;
 }
 
-.title {
+.header {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
     padding-top: 20px;
     padding-bottom: 30px;
+
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.deleteButtonHover {
+    display: flex;
+    position: fixed;
+    flex-direction: row;
+    justify-content: right;
+    width: 100%;
+
+
+    padding-right: 30px;
 
     font-weight: bold;
     font-size: 30px;
